@@ -4,6 +4,8 @@
 * Adapt `Dns_resolver` and `Dns_resolver_unix` to use `Ipaddr.t` more.
 * Improve `mldig` to use `Ipaddr` more and add more RR printing to
   match the conventional `dig` tool behaviour.
+* Add `Dns_resolver_mirage` module for making stub resolution requests
+  using the Mirage module types.
 
 0.9.1 (2014-07-29):
 * Fix file descriptor leak in resolver (#15, #16) by expanding `commfn`
